sample-project updates
- Added `timeout/` and `unreliable/` endpoints for testing network
  timeouts.

- Added settings values for timeouts and retry-related testing.

- Template tweaks

--- a/sample-project/sample_app/templates/article.html
+++ b/sample-project/sample_app/templates/article.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <header><h1>{{ DOMAIN_NAME }}</h1></header>
+  {% include "header.html" %}
 
   <main>
     <section>
