--- a/tests/templates/templatetags_example.html
+++ b/tests/templates/templatetags_example.html
@@ -1,9 +1,9 @@
-{% load webmention_endpoint %}
+{% load webmentions %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% webmention_endpoint %}
+    {% webmentions_endpoint %}
     <title>Title</title>
 </head>
 <body>
