--- a/sample-project/sample_app/templates/article.html
+++ b/sample-project/sample_app/templates/article.html
@@ -1,9 +1,10 @@
+{% load webmentions %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% webmention_endpoint %}
+  {% webmentions_endpoint %}
   <title>{{ DOMAIN_NAME }}</title>
 
   <style>
