Created another docker configuration to test library upgrades.
1. Installs `django-wm==2.3.0`.
2. Creates some sample webmention data.
3. Upgrades to latest available 3.x pre-release.
4. Runs the server to make sure it still works
   - can still send/receive mentions
   - database queries with old data don't cause unexpected errors
   - endpoints are accessible

--- a/sample-project/sample_app/templates/article.html
+++ b/sample-project/sample_app/templates/article.html
@@ -1,4 +1,5 @@
 {% load webmentions %}
+{% load sampleapp %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +30,7 @@
     <section>
       <article class="h-entry">
         <h2 class="p-name">{{ article.title }}</h2>
-        <p>Published by <a class="p-author h-card" href="http://{{ DOMAIN_NAME }}">{{ article.author }}</a>.</p>
+        <p>Published by {% maybe_link_hcard  article.author %}.</p>
 
         <div class="e-content">
           {{ article.content|safe }}
