--- a/sample-project/sample_app/templates/actions.html
+++ b/sample-project/sample_app/templates/actions.html
@@ -8,36 +8,6 @@
   <title>{{ DOMAIN_NAME }}</title>
   <style>
     {% include "style.css" %}
-
-    input[type=text], input[type=url], textarea {
-      width: 100%;
-    }
-    input, label, select, button, textarea {
-      padding: 1ch;
-      border-radius: 1ch;
-    }
-    input, button, select, textarea {
-      font-size: 18px;
-    }
-    form {
-      width: 48ch;
-    }
-    button {
-      display: flex;
-      margin-left: auto;
-      margin-right: 0;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    label {
-      display: inline-block;
-      width: 6ch;
-      text-align: end;
-    }
-    p {
-      display: flex;
-      align-items: center;
-    }
   </style>
 
   <script type="application/javascript">
@@ -79,6 +49,8 @@
         {% endfor %}
       </ul>
     </section>
+
+    {% include "mentions.html" %}
   </main>
 </body>
 </html>
