--- a/sample-project/sample_app/templates/article.html
+++ b/sample-project/sample_app/templates/article.html
@@ -10,17 +10,6 @@
 
   <style>
     {% include "style.css" %}
-
-    .mention {
-        border: 2px solid grey;
-        border-radius: 1ch;
-        padding: 1ch 2ch;
-        width: fit-content;
-    }
-
-    .mention .meta {
-        font-variant: all-small-caps;
-    }
   </style>
 </head>
 <body>
@@ -38,28 +27,7 @@
       </article>
     </section>
 
-    <section id="mentions">
-      <aside>
-        <h2>Mentions:</h2>
-        {% for mention in article.mentions %}
-          <div class="mention {{ mention.post_type|default:"mention" }}">
-            <div class="meta">
-              <span class="type">{{ mention.post_type|default:"mention" }}</span><span> by </span>
-              {% if mention.hcard %}
-                <span class="h-card">
-                  <a class="p-name u-url" href="{{ mention.hcard.homepage }}">{{ mention.hcard.name }}</a>
-                </span>
-              {% else %}
-                <span>somebody?</span>
-              {% endif %}
-            </div>
-            <a href="{{ mention.source_url }}">{{ mention.source_url }}</a>
-          </div>
-        {% empty %}
-          No mentions yet :(
-        {% endfor %}
-      </aside>
-    </section>
+    {% include "mentions.html" with mentions=article.mentions %}
   </main>
 </body>
 </html>
