--- a/sample-project/sample_app/templates/style.css
+++ b/sample-project/sample_app/templates/style.css
@@ -11,3 +11,45 @@ a, a:visited {
 section {
     margin-bottom: 3rem;
 }
+
+.mention {
+    border: 2px solid grey;
+    border-radius: 1ch;
+    padding: 1ch 2ch;
+    width: fit-content;
+}
+
+.mention .meta {
+    font-variant: all-small-caps;
+}
+
+
+input[type=text], input[type=url], textarea {
+  width: 100%;
+}
+input, label, select, button, textarea {
+  padding: 1ch;
+  border-radius: 1ch;
+}
+input, button, select, textarea {
+  font-size: 18px;
+}
+form {
+  width: 48ch;
+}
+button {
+  display: flex;
+  margin-left: auto;
+  margin-right: 0;
+  font-weight: bold;
+  cursor: pointer;
+}
+label {
+  display: inline-block;
+  width: 6ch;
+  text-align: end;
+}
+p {
+  display: flex;
+  align-items: center;
+}
