Added permissions check to {% webmentions_dashboard %}
This will now render as the empty string if the user does not have
permission to view the dashboard.

--- a/tests/templates/templatetags_example.html
+++ b/tests/templates/templatetags_example.html
@@ -7,6 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-
+  {% webmentions_dashboard %}
+  {% webmentions_dashboard "Custom dashboard title" %}
 </body>
 </html>
