Added sample_app_wagtail to sample-project.
Demonstrate Wagtail integration.

Updated docker-compose.yml to use it.
- `with-celery` variant is unchanged
- `no-celery` variant replaced with `with-wagtail`
  - This *also* does not use celery.
  - Enables testing of wagtail integration in 'live' environment.

--- a/sample-project/sample_app/templates/sample_app/actions.html
+++ b/sample-project/sample_app/templates/sample_app/actions.html
@@ -7,7 +7,7 @@
   {% webmentions_endpoint %}
   <title>{{ DOMAIN_NAME }}</title>
   <style>
-    {% include "style.css" %}
+    {% include "sample_app/style.css" %}
   </style>
 
   <script type="application/javascript">
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-  {% include "header.html" %}
+  {% include "sample_app/header.html" %}
 
   <main>
     <section>
@@ -50,7 +50,7 @@
       </ul>
     </section>
 
-    {% include "mentions.html" %}
+    {% include "sample_app/mentions.html" %}
   </main>
 </body>
 </html>
