--- a/mentions/templates/mentions/webmention-dashboard.html
+++ b/mentions/templates/mentions/webmention-dashboard.html
@@ -42,6 +42,12 @@
             background-color: #e4e4e4;
         }
 
+        .icon {
+            font-size: large;
+            margin: 0 .5ch;
+            cursor: default;
+        }
+
         .item-summary {
             display: flex;
             flex-direction: row;
@@ -78,12 +84,6 @@
 
         .end {
             font-size: smaller;
-        }
-
-        .icon {
-            font-size: large;
-            margin: 0 .5ch;
-            cursor: default;
         }
     </style>
 </head>
@@ -230,15 +230,17 @@
     document.querySelectorAll(".item").forEach(item => {
         // Click on received webmention summary to show more detail.
         if (item.querySelector(".item-detail")) {
-            item.dataset.expanded = defaultExpanded;
+            item.dataset.expanded = `${defaultExpanded}`;
 
             const summary = item.querySelector(".item-summary");
             summary.addEventListener("click", () => {
                 const isExpanded = item.dataset.expanded === "true";
-                item.dataset.expanded = !isExpanded;
+                item.dataset.expanded = `${!isExpanded}`;
             });
         }
     });
+
+    setTimeout(() => location.reload(), 10_000)
   </script>
 </body>
 </html>
